--- a/docker/edgedb-api/Dockerfile
+++ b/docker/edgedb-api/Dockerfile
@@ -1,4 +1,3 @@
 FROM python:3.7
-RUN pip install fastapi uvicorn 
-RUN sqlalchemy pydantic
+RUN pip install fastapi uvicorn sqlalchemy pydantic
 COPY ./edgedb-api /app
